# behind-the-box

./: .gitignore  CLAUDE.md  conftest.py  pyproject.toml
behind_the_box/: __init__.py  base.py  datasets.py
behind_the_box/linear_models/: 01-closed-form-regression.md  01-closed-form-regression.py  __init__.py
experiments/: __init__.py  benchmark.py  datasets.py
linear_models/: 01-closed-form-regression.md  01-closed-form-regression.py
tests/: conftest.py
tests/linear_models/: regressor_checks.py  test_01_closed_form_regression.py
