[project]
name = "behind-the-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "scikit-learn>=1.9.0",
]

[tool.ruff]
lint.extend-select = ["ALL"] #["PTH", "ANN", "NPY", "W", "T20", "D", "INP"]
lint.ignore = [
    # snake_case & non-lower case convention
    "N803",
    "N806",
    # numbered filenames (e.g. 01-closed-form-regression.py) are intentional
    "N999",
    # assert statements are used in tests
    "S101",
    # PTH rules are deemed unsafe by ruff
    "PTH",
]