[project]
name = "behind-the-box"
version = "0.1.0"
description = "ML algorithms implemented from scratch in NumPy, paired with mathematical derivations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: needs internet access (e.g. fetch_california_housing)",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "scikit-learn>=1.9.0",
]

[tool.ruff]
lint.extend-select = ["ALL"] #["PTH", "ANN", "NPY", "W", "T20", "D", "INP"]
lint.ignore = [
    # snake_case & non-lower case convention
    "N803",
    "N806",

    "N999", # numbered filenames (e.g. 01-closed-form-regression.py) are intentional
    "S101", # assert statements are used in tests
    "PTH", # PTH rules are deemed unsafe by ruff
    "D", # unused convention (use google instead)
    "RUF002" # using hypen or minus in docstring
]

[tool.ruff.lint.per-file-ignores]
"experiments/*" = ["T20"] # printing the leaderboard is the CLI's job